# python-libjsonpath

./: .clang-format  .gitignore  .gitmodules  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.py
include/libjsonpath/: node.hpp  path.hpp
scripts/: benchmark.py  pprofile.py
src/: libjsonpath.cpp  libjsonpath.pyi
src/libjsonpath/: __init__.py  __init__.pyi  _env.py  _libjsonpath.cpp  _node.cpp  _nothing.py  _path.cpp  _path.py  _path.pyi  filter_function.py
src/libjsonpath/functions/: __init__.py  count.py  filter_function.py  length.py  match.py  search.py  value.py
tests/: test_compliance.py  test_lex.py  test_parse.py  test_singular_query.py
