[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "pybind11>=2.10.0",
]

[tool.cibuildwheel]
test-command = "python {project}/tests/test.py"
test-skip = "*universal2:arm64"

[tool.ruff]
target-version = "py38"

ignore = ["S105", "S101", "D107", "D105", "PLR0913", "SIM108"]
select = [
  "A",
  "ARG",
  "B",
  "BLE",
  "C4",
  "D",
  "E",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PIE",
  "PL",
  "PT",
  "Q",
  "RET",
  "RSE",
  "S",
  "SIM",
  "SLF",
  "T10",
  "T20",
  "TCH",
  "TID",
  "YTT",
]

fixable = ["I"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.isort]
force-single-line = true

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"src/libjsonpath/__about__.py" = ["D100"]
"src/libjsonpath/__init__.py" = ["D104", "E402", "I001", "F401"]
"tests/*" = ["D100", "D101", "D104", "D103"]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
